A11y: Fixed text obfuscation issue in mail list view
The truncated elements where actually larger than the available space, so axe would detect obfuscated text and could not determine the background color.

--- a/ui/apps/io.ox/mail/style.less
+++ b/ui/apps/io.ox/mail/style.less
@@ -32,6 +32,15 @@
         .leftside  { width: 240px; }
         .rightside { left:  240px; }
     }
+
+    .mail-item .list-item {
+        .drag-title, .person {
+            width: 100%;
+            display: inline-block;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+    }
 }
 
 .io-ox-mail-window .vsplit .leftside .alert {
